force-app/main/default/objects/Surverys__c/Surverys__c.object-meta.xml
<CustomObject>
    <description>This will give access to the Survey Object.</description>
    <label>Surveys</label>
    <nameField>
        <label>Surverys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>