force-app/main/default/objects/Surverys__c/fields/isAvailable__c.field-meta.xml
<CustomField>
    <fullName>isAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the requested products are available.</description>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>