force-app/main/default/objects/Surverys__c/fields/requestId__c.field-meta.xml
<CustomField>
    <fullName>requestId__c</fullName>
    <description>Associates each Survey with its related Service Request Form for feedback tracking.</description>
    <label>Service Request</label>
    <referenceTo>RequestForms__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>